robot appearance normal/outgroup comparison

--- a/aalto.bib
+++ b/aalto.bib
@@ -1356,6 +1356,25 @@
   file = {/home/avnerus/Zotero/storage/QRB2FLRP/Cadenas et al. - 2018 - DREAMzone Testing two vicarious contact intervent.pdf}
 }
 
+@article{caeiro-rodriguezSystematicReviewCommercial2021,
+  title = {A {{Systematic Review}} of {{Commercial Smart Gloves}}: Current {{Status}} and {{Applications}}},
+  shorttitle = {A {{Systematic Review}} of {{Commercial Smart Gloves}}},
+  author = {{Caeiro-Rodr{\'i}guez}, Manuel and {Otero-Gonz{\'a}lez}, Iv{\'a}n and {Mikic-Fonte}, Fernando A. and {Llamas-Nistal}, Mart{\'i}n},
+  year = {2021},
+  month = jan,
+  journal = {Sensors},
+  volume = {21},
+  number = {8},
+  pages = {2667},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  doi = {10.3390/s21082667},
+  abstract = {Smart gloves have been under development during the last 40 years to support human-computer interaction based on hand and finger movement. Despite the many devoted efforts and the multiple advances in related areas, these devices have not become mainstream yet. Nevertheless, during recent years, new devices with improved features have appeared, being used for research purposes too. This paper provides a review of current commercial smart gloves focusing on three main capabilities: (i) hand and finger pose estimation and motion tracking, (ii) kinesthetic feedback, and (iii) tactile feedback. For the first capability, a detailed reference model of the hand and finger basic movements (known as degrees of freedom) is proposed. Based on the PRISMA guidelines for systematic reviews for the period 2015\textendash 2021, 24 commercial smart gloves have been identified, while many others have been discarded because they did not meet the inclusion criteria: currently active commercial and fully portable smart gloves providing some of the three main capabilities for the whole hand. The paper reviews the technologies involved, main applications and it discusses about the current state of development. Reference models to support end users and researchers comparing and selecting the most appropriate devices are identified as a key need.},
+  copyright = {http://creativecommons.org/licenses/by/3.0/},
+  langid = {english},
+  keywords = {extended reality,hand and finger pose estimation and motion tracking,haptic feedback,kinesthetic feedback,smart gloves,tactile feedback},
+  file = {/home/avnerus/Zotero/storage/A4YJZZX7/Caeiro-Rodríguez et al. - 2021 - A Systematic Review of Commercial Smart Gloves Cu.pdf;/home/avnerus/Zotero/storage/A6WZ9Y95/2667.html}
+}
+
 @inproceedings{caldwellTelepresenceVisualAudio1994,
   title = {Tele-Presence: Visual, Audio and Tactile Feedback and Control of a Twin Armed Mobile Robot},
   booktitle = {Proceedings of the 1994 {{IEEE International Conference}} on {{Robotics}} and {{Automation}}},
@@ -2313,6 +2332,20 @@
   publisher = {{Suny Press}},
   isbn = {0-7914-8884-5},
   file = {/home/avnerus/Zotero/storage/T6GB8Q3R/Weiss et al. - 2019 - 50 Concepts for a Critical Phenomenology.pdf}
+}
+
+@techreport{dohmatobDarkControlUnified2017,
+  type = {Preprint},
+  title = {Dark {{Control}}: Towards a {{Unified Account}} of {{Default Mode Function}} by {{Markov Decision Processes}}},
+  shorttitle = {Dark {{Control}}},
+  author = {Dohmatob, Elvis and Dumas, Guillaume and Bzdok, Danilo},
+  year = {2017},
+  month = jun,
+  institution = {{Neuroscience}},
+  doi = {10.1101/148890},
+  abstract = {The default mode network (DMN) is believed to subserve the baseline mental activity in humans. Its highest energy consumption compared to other brain networks and its intimate coupling with conscious awareness are both pointing to an overarching function. Many research streams support an evolutionarily adaptive role in envisioning experience to anticipate the future. The present paper proposes a process model that tries to explain how the DMN may implement continuous evaluation and prediction of the environment to guide behavior. DMN function is recast in mathematical terms of control theory and reinforcement learning based on Markov decision processes. We argue that our formal account of DMN function naturally accommodates as special cases the previously proposed cognitive accounts on (1) predictive coding, (2) semantic associations, and (3) a ``sentinel'' role. Moreover, this process model for the neural optimization of complex behavior in the DMN offers parsimonious explanations for recent experimental findings in animals and humans.},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/H3VRZA5Y/Dohmatob et al. - 2017 - Dark Control Towards a Unified Account of Default.pdf}
 }
 
 @article{dolezalRemoteBodyPhenomenology2009,
@@ -4226,6 +4259,20 @@
   file = {/home/avnerus/Zotero/storage/F9LLW9EY/Hokka - 2021 - PewDiePie, racism and Youtube’s neoliberalist inte.pdf}
 }
 
+@article{holmesSurpriseBayesianBrain2019,
+  title = {``{{Surprise}}'' and the {{Bayesian Brain}}: Implications for {{Psychotherapy Theory}} and {{Practice}}},
+  shorttitle = {``{{Surprise}}'' and the {{Bayesian Brain}}},
+  author = {Holmes, Jeremy and Nolte, Tobias},
+  year = {2019},
+  journal = {Frontiers in Psychology},
+  volume = {10},
+  pages = {592},
+  issn = {1664-1078},
+  doi = {10.3389/fpsyg.2019.00592},
+  abstract = {The free energy principle (FEP) has gained widespread interest and growing acceptance as a new paradigm of brain function, but has had little impact on the theory and practice of psychotherapy. The aim of this paper is to redress this. Brains rely on Bayesian inference during which ``bottom-up'' sensations are matched with ``top-down'' predictions. Discrepancies result in ``prediction error.'' The brain abhors informational ``surprise,'' which is minimized by (1) action enhancing the statistical likelihood of sensory samples, (2) revising inferences in the light of experience, updating ``priors'' to reality-aligned ``posteriors,'' and (3) optimizing the complexity of our generative models of a capricious world. In all three, free energy is converted to bound energy. In psychopathology energy either remains unbound, as in trauma and inhibition of agency, or manifests restricted, anachronistic ``top-down'' narratives. Psychotherapy fosters client agency, linguistic and practical. Temporary uncoupling bottom-up from top-down automatism and fostering scrutinized simulations sets a number of salutary processes in train. Mentalising enriches Bayesian inference, enabling experience and feeling states to be ``metabolized'' and assimilated. ``Free association'' enhances more inclusive sensory sampling, while dream analysis foregrounds salient emotional themes as ``attractors.'' FEP parallels with psychoanalytic theory are outlined, including Freud's unpublished project, Bion's ``contact barrier'' concept, the Fonagy/Target model of sexuality, Laplanche's therapist as ``enigmatic signifier,'' and the role of projective identification. The therapy stimulates patients to become aware of and revise the priors' they bring to interpersonal experience. In the therapeutic ``duet for one,'' the energy binding skills and non-partisan stance of the analyst help sufferers face trauma without being overwhelmed by psychic entropy. Overall, the FEP provides a sound theoretical basis for psychotherapy practice, training, and research.},
+  file = {/home/avnerus/Zotero/storage/SBC6R3L2/Holmes and Nolte - 2019 - “Surprise” and the Bayesian Brain Implications fo.pdf}
+}
+
 @inproceedings{honauerWORMEInteractiveToy2020,
   title = {{{WORM}}-{{E}}: An {{Interactive Toy Enriching Children}}'s {{Bodily}} and {{Social Play}}},
   shorttitle = {{{WORM}}-{{E}}},
@@ -5991,6 +6038,22 @@
   file = {/home/avnerus/Zotero/storage/4UU69W4U/Licoppe and Morel - 2012 - Video-in-Interaction “Talking Heads” and the Mult.pdf;/home/avnerus/Zotero/storage/GE5YBWL4/08351813.2012.html}
 }
 
+@article{liDialogueGenerationImitation2018,
+  title = {Dialogue {{Generation}}: From {{Imitation Learning}} to {{Inverse Reinforcement Learning}}},
+  shorttitle = {Dialogue {{Generation}}},
+  author = {Li, Ziming and Kiseleva, Julia and {de Rijke}, Maarten},
+  year = {2018},
+  month = dec,
+  journal = {arXiv:1812.03509 [cs]},
+  eprint = {1812.03509},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  abstract = {The performance of adversarial dialogue generation models relies on the quality of the reward signal produced by the discriminator. The reward signal from a poor discriminator can be very sparse and unstable, which may lead the generator to fall into a local optimum or to produce nonsense replies. To alleviate the first problem, we first extend a recently proposed adversarial dialogue generation method to an adversarial imitation learning solution. Then, in the framework of adversarial inverse reinforcement learning, we propose a new reward model for dialogue generation that can provide a more accurate and precise reward signal for generator training. We evaluate the performance of the resulting model with automatic metrics and human evaluations in two annotation settings. Our experimental results demonstrate that our model can generate more high-quality responses and achieve higher overall performance than the state-of-the-art.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning},
+  file = {/home/avnerus/Zotero/storage/E9UZTJ9U/Li et al. - 2018 - Dialogue Generation From Imitation Learning to In.pdf;/home/avnerus/Zotero/storage/44SCB6TU/1812.html}
+}
+
 @book{lieblichNarrativeResearchReading1998,
   title = {Narrative Research: Reading, Analysis and Interpretation},
   shorttitle = {Narrative Research},
@@ -7158,6 +7221,17 @@
   file = {/home/avnerus/Zotero/storage/68XJXDYB/Neumann - 2018 - The Child Structure and Dynamics of the Nascent P.pdf}
 }
 
+@misc{NeuroscienceAdversityVs2019,
+  title = {Neuroscience {{Of Adversity Vs}}. {{Friston}}'s {{Free Energy Principle}} - {{Driven}}},
+  year = {2019},
+  month = mar,
+  journal = {Driven Resilience},
+  abstract = {Resilient people can not only withstand stress but can turn adversity into an advantage. Click here to learn about the neuroscience behind adversity.},
+  howpublished = {https://home.hellodriven.com/articles/the-neuroscience-of-adversity-vs-fristons-free-energy-principle/},
+  langid = {american},
+  file = {/home/avnerus/Zotero/storage/64BP2L7E/the-neuroscience-of-adversity-vs-fristons-free-energy-principle.html}
+}
+
 @article{neustaedterBeingThereWatching2018,
   title = {From {{Being There}} to {{Watching}}: Shared and {{Dedicated Telepresence Robot Usage}} at {{Academic Conferences}}},
   shorttitle = {From {{Being There}} to {{Watching}}},
@@ -8270,6 +8344,15 @@
   file = {/home/avnerus/Zotero/storage/DAHR2VKT/Ellie Ragland - Jacques Lacan and the Logic of Structure_ Topology and language in psychoanalysis-Routledge (2015).pdf}
 }
 
+@article{ramachandranBayesianInverseReinforcement,
+  title = {Bayesian {{Inverse Reinforcement Learning}}},
+  author = {Ramachandran, Deepak},
+  pages = {6},
+  abstract = {Inverse Reinforcement Learning (IRL) is the problem of learning the reward function underlying a Markov Decision Process given the dynamics of the system and the behaviour of an expert. IRL is motivated by situations where knowledge of the rewards is a goal by itself (as in preference elicitation) and by the task of apprenticeship learning (learning policies from an expert). In this paper we show how to combine prior knowledge and evidence from the expert's actions to derive a probability distribution over the space of reward functions. We present efficient algorithms that find solutions for the reward learning and apprenticeship learning tasks that generalize well over these distributions. Experimental results show strong improvement for our methods over previous heuristic-based approaches.},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/FEAZIXE7/Ramachandran - Bayesian Inverse Reinforcement Learning.pdf}
+}
+
 @book{ranciereDisagreementPoliticsPhilosophy1999,
   title = {Disagreement: Politics and Philosophy},
   shorttitle = {Disagreement},
@@ -8665,6 +8748,20 @@
   isbn = {1-4673-6024-4}
 }
 
+@article{safronIntegratedWorldModeling2020,
+  title = {An {{Integrated World Modeling Theory}} ({{IWMT}}) of {{Consciousness}}: Combining {{Integrated Information}} and {{Global Neuronal Workspace Theories With}} the {{Free Energy Principle}} and {{Active Inference Framework}}; {{Toward Solving}} the {{Hard Problem}} and {{Characterizing Agentic Causation}}},
+  shorttitle = {An {{Integrated World Modeling Theory}} ({{IWMT}}) of {{Consciousness}}},
+  author = {Safron, Adam},
+  year = {2020},
+  journal = {Frontiers in Artificial Intelligence},
+  volume = {3},
+  pages = {30},
+  issn = {2624-8212},
+  doi = {10.3389/frai.2020.00030},
+  abstract = {The Free Energy Principle and Active Inference Framework (FEP-AI) begins with the understanding that persisting systems must regulate environmental exchanges and prevent entropic accumulation. In FEP-AI, minds and brains are predictive controllers for autonomous systems, where action-driven perception is realized as probabilistic inference. Integrated Information Theory (IIT) begins with considering the preconditions for a system to intrinsically exist, as well as axioms regarding the nature of consciousness. IIT has produced controversy because of its surprising entailments: quasi-panpsychism; subjectivity without referents or dynamics; and the possibility of fully-intelligent-yet-unconscious brain simulations. Here, I describe how these controversies might be resolved by integrating IIT with FEP-AI, where integrated information only entails consciousness for systems with perspectival reference frames capable of generating models with spatial, temporal, and causal coherence for self and world. Without that connection with external reality, systems could have arbitrarily high amounts of integrated information, but nonetheless would not entail subjective experience. I further describe how an integration of these frameworks may contribute to their evolution as unified systems theories and models of emergent causation. Then, inspired by both Global Neuronal Workspace Theory (GNWT) and the Harmonic Brain Modes framework, I describe how streams of consciousness may emerge as an evolving generation of sensorimotor predictions, with the precise composition of experiences depending on the integration abilities of synchronous complexes as self-organizing harmonic modes (SOHMs). These integrating dynamics may be particularly likely to occur via richly connected subnetworks affording body-centric sources of phenomenal binding and executive control. Along these connectivity backbones, SOHMs are proposed to implement turbo coding via loopy message-passing over predictive (autoencoding) networks, thus generating maximum a posteriori estimates as coherent vectors governing neural evolution, with alpha frequencies generating basic awareness, and cross-frequency phase-coupling within theta frequencies for access consciousness and volitional control. These dynamic cores of integrated information also function as global workspaces, centered on posterior cortices, but capable of being entrained with frontal cortices and interoceptive hierarchies, thus affording agentic causation. Integrated World Modeling Theory (IWMT) represents a synthetic approach to understanding minds that reveals compatibility between leading theories of consciousness, thus enabling inferential synergy.},
+  file = {/home/avnerus/Zotero/storage/UVTWF9BG/Safron - 2020 - An Integrated World Modeling Theory (IWMT) of Cons.pdf}
+}
+
 @article{saguyIronyHarmonyIntergroup2009,
   title = {The {{Irony}} of {{Harmony}}: Intergroup {{Contact Can Produce False Expectations}} for {{Equality}}},
   shorttitle = {The {{Irony}} of {{Harmony}}},
@@ -8712,6 +8809,23 @@
   abstract = {Drawing on the self-concept activation and goal-priming account of the priming effect, this study examined how self-concept\textemdash i.e., ideal self, ought self, and actual self\textemdash can be harnessed as a model for avatar customization in digital games to promote healthy-eating behavior. Female participants (N = 133) customized an avatar in a digital game to reflect either the ideal, ought, or actual self. Participants then selected food items for their avatar within the digital game as well as food items for themselves to eat afterward. Results suggest that for participants using an ought-self avatar, the extent to which they were conscious of their health was positively related to healthier food choice both within and after playing the game. No such effect emerged for participants who used an ideal- or actual-self avatar, indicating that participants formed the goal of being healthy only with regard to the ought self. This study demonstrates that avatar customization in a digital game can serve a regulatory function by representing individuals' duties and responsibilities, thus, causing them to adopt such attributes manifested in their avatar during and after the game.},
   annotation = {\_eprint: https://doi.org/10.1080/15213269.2016.1234397},
   file = {/home/avnerus/Zotero/storage/7CAN4JSU/Sah et al. - 2017 - Are You What Your Avatar Eats Health-Behavior Eff.pdf;/home/avnerus/Zotero/storage/5CD6YTIY/15213269.2016.html}
+}
+
+@article{salehHierarchicalReinforcementLearning2020,
+  title = {Hierarchical {{Reinforcement Learning}} for {{Open}}-{{Domain Dialog}}},
+  author = {Saleh, Abdelrhman and Jaques, Natasha and Ghandeharioun, Asma and Shen, Judy and Picard, Rosalind},
+  year = {2020},
+  month = apr,
+  journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume = {34},
+  number = {05},
+  pages = {8741--8748},
+  issn = {2374-3468},
+  doi = {10.1609/aaai.v34i05.6400},
+  abstract = {Open-domain dialog generation is a challenging problem; maximum likelihood training can lead to repetitive outputs, models have difficulty tracking long-term conversational goals, and training on standard movie or online datasets may lead to the generation of inappropriate, biased, or offensive text. Reinforcement Learning (RL) is a powerful framework that could potentially address these issues, for example by allowing a dialog model to optimize for reducing toxicity and repetitiveness. However, previous approaches which apply RL to open-domain dialog generation do so at the word level, making it difficult for the model to learn proper credit assignment for long-term conversational rewards. In this paper, we propose a novel approach to hierarchical reinforcement learning (HRL), VHRL, which uses policy gradients to tune the utterance-level embedding of a variational sequence model. This hierarchical approach provides greater flexibility for learning long-term, conversational rewards. We use self-play and RL to optimize for a set of human-centered conversation metrics, and show that our approach provides significant improvements \textendash{} in terms of both human evaluation and automatic metrics \textendash{} over state-of-the-art dialog models, including Transformers.},
+  copyright = {Copyright (c) 2020 Association for the Advancement of Artificial Intelligence},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/EPY49C39/Saleh et al. - 2020 - Hierarchical Reinforcement Learning for Open-Domai.pdf}
 }
 
 @article{salemAntinormalizationDiscourseContext2005,
@@ -9030,6 +9144,20 @@
   publisher = {{U of Minnesota Press}},
   isbn = {1-4529-4262-5},
   file = {/home/avnerus/Zotero/storage/KC8NK5YZ/(Posthumanities) Michel Serres - The Parasite-Univ Of Minnesota Press (2007).pdf}
+}
+
+@book{sethInferenceBestPrediction2015,
+  title = {Inference to the {{Best Prediction}}},
+  author = {Seth, Anil K.},
+  year = {2015},
+  month = jan,
+  journal = {Open MIND},
+  publisher = {{Open MIND. Frankfurt am Main: MIND Group}},
+  doi = {10.15502/9783958570986},
+  abstract = {Responding to  Wanja Wiese 's incisive commentary, I first develop the analogy between predictive processing and scientific discovery. Active inference in the Bayesian brain turns out to be well characterized by abduction (inference to the best explanation), rather than by deduction or induction. Furthermore, the emphasis on control highlighted by cybernetics suggests that active inference can be a process of ``inference to the best prediction'', leading to a distinction between ``epistemic'' and ``instrumental'' active inference. Secondly, on the relationship between perceptual presence and objecthood, I recognize a distinction between the ``world revealing'' presence of phenomenological objecthood, and the experience of ``absence of presence'' or ``phenomenal unreality''. Here I propose that world-revealing presence (objecthood) depends on counterfactually rich predictive models that are necessarily hierarchically deep, whereas phenomenal unreality arises when active inference fails to unmix causes ``in the world'' from those that depend on the perceiver. Finally, I return to control-oriented active inference in the setting of interoception, where cybernetics and predictive processing are most closely connected.},
+  isbn = {978-3-95857-098-6},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/FIPP4KJC/Seth - 2015 - Inference to the Best Prediction.pdf;/home/avnerus/Zotero/storage/HTPVZCVI/inference-to-the-best-prediction.html}
 }
 
 @article{sevdalisCapturedMotionDance2011,
@@ -9465,6 +9593,19 @@
   year = {2019},
   abstract = {Fiber-reinforced actuators are a class of soft actuator that have been developed by a number of research groups around the world in recent years.~ The basic design consists of an elastomer bladder wrapped with inextensible reinforcements.},
   langid = {english}
+}
+
+@article{solmsHardProblemConsciousness2019,
+  title = {The {{Hard Problem}} of {{Consciousness}} and the {{Free Energy Principle}}},
+  author = {Solms, Mark},
+  year = {2019},
+  journal = {Frontiers in Psychology},
+  volume = {9},
+  pages = {2714},
+  issn = {1664-1078},
+  doi = {10.3389/fpsyg.2018.02714},
+  abstract = {This article applies the free energy principle to the hard problem of consciousness. After clarifying some philosophical issues concerning functionalism, it identifies the elemental form of consciousness as affect and locates its physiological mechanism (an extended form of homeostasis) in the upper brainstem. This mechanism is then formalized in terms of free energy minimization (in unpredicted contexts) where decreases and increases in expected uncertainty are felt as pleasure and unpleasure, respectively. Emphasis is placed on the reasons why such existential imperatives feel like something to and for an organism.},
+  file = {/home/avnerus/Zotero/storage/B64Z7GM7/Solms - 2019 - The Hard Problem of Consciousness and the Free Ene.pdf}
 }
 
 @misc{SomeoneInstalledSeeSaws2019,
