--- a/survey/research_questions.Rmd
+++ b/survey/research_questions.Rmd
@@ -160,11 +160,43 @@ The following data is available for the survey participants.
 # Research questions
 
 ## Respondents demographics
+
+
+### Q: How many participants of each side reached the robot statements?
+```{r}
+Telerobot_ages %>% 
+dplyr::filter(!is.na(Q_ROBOT_STATEMENTS_1)) %>%
+count(v)
+```
+
+### Q: How many male and female?
+```{r}
+Telerobot_ages %>% 
+dplyr::filter(!is.na(Q_ROBOT_STATEMENTS_1)) %>%
+count(as_factor(Q_DEMOGRAPHICS_2))
+
+Telerobot_ages %>% 
+dplyr::filter(!is.na(Q_ROBOT_STATEMENTS_1)) %>%
+count(v,as_factor(Q_DEMOGRAPHICS_2))
+
+Telerobot_ages %>% 
+dplyr::filter(!is.na(Q_ROBOT_STATEMENTS_1)) %>%
+select(Q_AGE) %>%
+summary
+```
+
+### Summary of age    
+```{r}
+Telerobot_ages %>% 
+dplyr::filter(!is.na(Q_ROBOT_STATEMENTS_1)) %>%
+count(v)
+```
+
 ### Q: Was there an age difference?
 ```{r}
 Telerobot_ages %>% 
-#dplyr::filter(Finished == 1) %>%
-dplyr::filter(!is.na(Q_ROBOT_STATEMENTS_1)) %>%
+dplyr::filter(Finished == 1) %>%
+#dplyr::filter(!is.na(Q_ROBOT_STATEMENTS_1)) %>%
 anova_test(Q_AGE ~ v)
 ```
 
@@ -588,6 +620,48 @@ ggdensity(Telerobot_ages %>% select(Q_GROUP_SLIDER_1,v),x = "Q_GROUP_SLIDER_1", 
 
 
 ## Potential of telepuppets
+
+### Q: Interest of puppet show in general
+```{r, fig.width=10,fig.asp=0.5}
+  ggsummarystats(
+  Telerobot_ages %>% select('Q_PUPPET_INTEREST', 'ResponseId','v') %>% drop_na(),
+  x = "v", y = "Q_PUPPET_INTEREST",
+  ggfunc = ggboxplot, palette="npg", add="jitter", color="v",
+  summaries = c("n", "median", "mean"),
+  digits = 3,
+  table.font.size = 3
+)
+```
+### Q: Interest of puppet show in general - what effects - ANOVA?
+
+
+### Q: Interest of puppet show in general - what effects - Correlation Matrix?
+```{r}
+corr_vars <- c(
+    "Q_ROBOT_NARS",
+    "Q_AGE",
+    "Q_TECH_CONFIDENCE",
+    "Q_PUPPET_INTEREST"
+  )
+
+names <- c(
+    "NARS",
+    "Age",
+    "Tech confidence",
+    "Puppet show"
+  )
+Telerobot_ages %>%
+  dplyr::select(
+    "v",
+    corr_vars
+  ) %>%
+  drop_na %>%
+  mutate_all(as.numeric) %>%
+  ggcorrmat(
+    cor.vars = corr_vars, cor.vars.names = names
+)
+```
+
 
 ### Q: What is the level of interest in performing a puppet show? How do these compare with other interests
 ```{r, fig.width=10,fig.asp=0.5}
